--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-stripe-elements": "^1.6.0",
     "redux": "^3.7.2"
   },
   "scripts": {
