--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.6.7",
+    "less": "3.0.0-pre.3"
   }
 }
